--- a/css/profilepage/profile.html
+++ b/css/profilepage/profile.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="mastercontainer">
-            
+            <!-- can't seem to align items on nav-links -->
         <div class="nav">
             <div class="insidebar">
             <h2 class="nav-title">Profile</h2>
@@ -78,6 +78,7 @@
                     </div>
                     <div class="data">
                         <div class="userone">
+                            <!-- image cicrles still too big and need to be closer together on right side of name -->
                             <p><img src="./images/user-circle.png" alt="user-circle"></p>
                             <p>Todd E</p>
                             <p><img src="./images/accept-circle.png" alt=""></p>
