--- a/belt_exam/index.html
+++ b/belt_exam/index.html
@@ -120,7 +120,7 @@
             </div>
         
             <div id="bar">
-
+                <!-- id.bar not needed?? -->
                 <div id="cookie-message">
                     <img src="./images/alert-dark.png" alt="alert-dark">
                     <div class="words">
